--- a/src/main/resources/messages/RomeBundle.properties
+++ b/src/main/resources/messages/RomeBundle.properties
@@ -1,2 +1,4 @@
-formatting.failure=Formatting error
 name=Rome
+rome.path.label=Rome CLI Path
+rome.settings.name=Rome Settings
+rome.formatting.failure=Formatting error
